2006-12-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/dsa_key.cpp:
	* common/src/isd_base.cpp:
	* common/src/isd_server.cpp:
	* common/src/ivs_connection.cpp:
	* common/src/local_system.cpp:
	* ica/win32/src/Log.h:
	* ica/win32/src/Log.cpp:
	* ica/win32/src/stdhdrs.cpp:
	* ica/src/demo_server.cpp:
	* ica/src/ica_main.cpp:
	* ica/src/isd_server.cpp:
	* ica/src/system_service.cpp:
	use Qt-debugging-techniques rather than printf & co

	* common/src/local_system.cpp:
	- under win32, handle logoff-events for not stopping service at logoff
	- added qt-message-handler for logging messages into file
	- do not create user-poll-thread when not building ICA

2006-12-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* acinclude.m4:
	added -L$QTDIR/lib/qt4 to linker-flags to make iTALC compile under
	Gentoo

2006-12-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	show access-confirmation-dialog in foreground

	* ima/src/client_manager.cpp:
	* ima/src/main_window.cpp:
	save and restore state of main-window

	* ima/src/client_manager.cpp:
	always allow switching to overview-mode in changeGlobalClientMode()

2006-12-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/dialogs/overview.ui:
	unique names for labels which avoids uic-warnings

	* ica/src/isd_server.cpp:
	do not try to make a reverse-lookup on IPs when doing
	host-based-authentication

	* ica/Makefile.am:
	* ica/win32/win32vnc.cpp:
	* ica/win32/vncMenu.h:
	* ica/win32/src/*:
	integrated new sources from TightVNC 1.3.8

	* common/src/isd_connection.cpp:
	- self-written code for connecting to socket as Qt's
	  QAbstractSocket::connectToHost() does lot of extra stuff (ghost
	  connections etc) which also confuses the different servers sometimes
	- when doint authentication, check whether number of sec-types is
	  greater then zero and return (instead of crash) if so
