@@ -1,8 +1,8 @@
-iTALC 0.9.8 - Intelligent Teaching and Learning with Computers
+iTALC 1.0.0.0 - Intelligent Teaching and Learning with Computers
 ===============================================================
 
 
-Copyright (c) 2004-2006 Tobias Doerffel
+Copyright (c) 2004-2007 Tobias Doerffel
 
 
 
